# automatic_flashcard_for_arabic

./: .gitignore  LICENSE  README.md  automatic_translation_all.py  automatic_translation_sentence.py  create_anki_flashcard.py  main.py  pyproject.toml  scrape_arabic_text.py
src/: __init__.py  custom_langchain.py  prepare_models.py  template_translation_arabic.py
