[project]
name = "arabic-flashcard-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "genanki>=0.13.1",
    "ipykernel>=6.29.5",
    "ipython>=8.18.1",
    "langchain>=0.3.20",
    "langchain-core>=0.3.45",
    "langchain-groq>=0.2.5",
    "langchain-huggingface>=0.1.2",
    "langgraph>=0.3.21",
    "matplotlib>=3.9.4",
    "nest-asyncio>=1.6.0",
    "numpy>=2.0.2",
    "playwright>=1.50.0",
    "pydub>=0.25.1",
    "ruff>=0.11.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
]
